[gd_scene load_steps=4 format=3 uid="uid://dyhxkeccnnrmi"]

[ext_resource type="Script" path="res://Weapons/Projectiles/Bullet.gd" id="1_er4vd"]
[ext_resource type="Script" path="res://Weapons/Projectiles/HitBox.gd" id="2_wf38d"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_hhk5d"]

[node name="bullet" type="RigidBody2D"]
rotation = -1.5708
collision_layer = 6
collision_mask = 6
gravity_scale = 0.0
script = ExtResource("1_er4vd")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = -1.5708

[node name="Disapere" type="Area2D" parent="."]

[node name="bullet_detected" type="CollisionShape2D" parent="Disapere"]

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 2048
collision_mask = 1024
script = ExtResource("2_wf38d")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource("CapsuleShape2D_hhk5d")
debug_color = Color(1, 0, 0.0862745, 0.270588)

[connection signal="body_entered" from="Disapere" to="." method="_on_disapere_body_entered"]
[connection signal="area_entered" from="HitBox" to="." method="_on_hit_box_area_entered"]
